lang/macro/tests/ui/fail/S-02-multiple-storage-structs.stderr
error: encountered 2 conflicting storage structs
 --> $DIR/S-02-multiple-storage-structs.rs:3:1
  |
3 | #[ink::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: conflicting storage struct
 --> $DIR/S-02-multiple-storage-structs.rs:6:12
  |
6 |     struct FirstStorageStruct {}
  |            ^^^^^^^^^^^^^^^^^^

error: conflicting storage struct
  --> $DIR/S-02-multiple-storage-structs.rs:10:12
   |
10 |     struct SecondStorageStruct {}
   |            ^^^^^^^^^^^^^^^^^^^
